# facet-format

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  release-plz.toml
facet-dessert/: Cargo.toml  README.md
facet-dessert/src/: lib.rs
facet-format/: Cargo.toml  README.md
facet-format/src/: event.rs  evidence.rs  lib.rs  parser.rs  serializer.rs  solver.rs  type_plan_cache.rs  visitor.rs
facet-format/src/deserializer/: dynamic.rs  eenum.rs  entry.rs  error.rs  mod.rs  path_navigator.rs  pointer.rs  scalar_matches.rs  setters.rs  struct_simple.rs  struct_with_flatten.rs
facet-format/src/jit/: cache.rs  compiler.rs  crash_handler.rs  format.rs  format_compiler.rs  helpers.rs  mod.rs  tests.rs
facet-json-classics/: Cargo.toml  README.md
facet-json-classics/fixtures/: canada.json.br  citm_catalog.json.br  twitter.json.br
facet-json-classics/src/: lib.rs
facet-lua/: Cargo.toml  README.md  arborium-header.html
facet-lua/src/: annotations.rs  consts.rs  lib.rs  parser.rs  scanner.rs  serializer.rs
facet-lua/src/snapshots/: facet_lua__annotations__tests__adjacently_tagged_enum.snap  facet_lua__annotations__tests__enum_rename_all_snake_case.snap  facet_lua__annotations__tests__enum_struct_variant.snap  facet_lua__annotations__tests__enum_with_variant_docs.snap  facet_lua__annotations__tests__hashmap.snap  facet_lua__annotations__tests__internally_tagged_enum.snap  facet_lua__annotations__tests__mixed_enum_variants.snap  facet_lua__annotations__tests__multi_type_generation.snap  facet_lua__annotations__tests__nested_types.snap  facet_lua__annotations__tests__newtype_struct.snap  facet_lua__annotations__tests__optional_field.snap  facet_lua__annotations__tests__simple_enum.snap  facet_lua__annotations__tests__simple_struct.snap  facet_lua__annotations__tests__struct_with_tuple_field.snap  facet_lua__annotations__tests__transparent_wrapper.snap  facet_lua__annotations__tests__transparent_wrapper_with_inner_type.snap  facet_lua__annotations__tests__tuple_struct.snap  facet_lua__annotations__tests__unit_struct.snap  facet_lua__annotations__tests__untagged_enum.snap  facet_lua__annotations__tests__vec.snap  facet_lua__serializer__tests__bool_and_numbers.snap  facet_lua__serializer__tests__compact_output.snap  facet_lua__serializer__tests__enum_tagging_wire_formats.snap  facet_lua__serializer__tests__enum_unit_variant.snap  facet_lua__serializer__tests__hashmap.snap  facet_lua__serializer__tests__nested_struct.snap  facet_lua__serializer__tests__optional_none.snap  facet_lua__serializer__tests__optional_some.snap  facet_lua__serializer__tests__simple_struct.snap  facet_lua__serializer__tests__simple_struct_pretty.snap  facet_lua__serializer__tests__string_escaping.snap  facet_lua__serializer__tests__vec.snap  facet_lua__serializer__tests__wire_format_kitchen_sink.snap  facet_lua__tests__to_lua_annotated.snap  facet_lua__tests__to_lua_annotated_nested.snap  facet_lua__tests__to_lua_annotated_with_option.snap  facet_lua__tests__to_lua_annotated_with_vec.snap
facet-lua/tests/: format_suite.rs
facet-postcard/fuzz-afl/: Cargo.toml  README.md
facet-postcard/fuzz-afl/src/: from_slice.rs
facet-python/: Cargo.toml  README.md
facet-python/src/: lib.rs
facet-python/src/snapshots/: check.py  facet_python__tests__chrono_types.snap  facet_python__tests__default_field_not_required.snap  facet_python__tests__empty_tuple_struct.snap  facet_python__tests__enum_data_variant_with_reserved_keyword_field.snap  facet_python__tests__enum_rename_all_snake_case.snap  facet_python__tests__enum_rename_individual.snap  facet_python__tests__enum_struct_variant_forward_reference.snap  facet_python__tests__enum_tuple_variant.snap  facet_python__tests__enum_variant_name_is_reserved_keyword.snap  facet_python__tests__enum_with_data_rename_all.snap  facet_python__tests__enum_with_imports.snap  facet_python__tests__flatten.snap  facet_python__tests__flatten_multilevel.snap  facet_python__tests__flatten_option_arc.snap  facet_python__tests__flatten_preserves_field_docs.snap  facet_python__tests__flatten_preserves_field_docs.snap.new  facet_python__tests__flatten_skip_serializing_field.snap  facet_python__tests__flatten_tagged_enum.snap  facet_python__tests__flatten_tagged_enum_newtype_struct.snap  facet_python__tests__flatten_with_optional_fields.snap  facet_python__tests__flatten_with_rename_all.snap  facet_python__tests__functional_typed_dict_forward_ref_quoted.snap  facet_python__tests__functional_typed_dict_no_type_keyword.snap  facet_python__tests__hashmap.snap  facet_python__tests__hashmap_with_enum_keys.snap  facet_python__tests__hashmap_with_integer_keys.snap  facet_python__tests__hashmap_with_integer_keys.snap.new  facet_python__tests__internally_tagged_enum.snap  facet_python__tests__internally_tagged_newtype_primitive_variant.snap  facet_python__tests__internally_tagged_newtype_struct_variant.snap  facet_python__tests__mixed_enum_variants.snap  facet_python__tests__nested_types.snap  facet_python__tests__newtype_struct.snap  facet_python__tests__optional_field.snap  facet_python__tests__proxy_preserves_doc_comment.snap  (+18 more)
facet-toml/: Cargo.toml  README.md
facet-toml/benches/: classics.rs
facet-toml/examples/: attr_test.rs
facet-toml/src/: axum.rs  error.rs  lib.rs  parser.rs  serializer.rs
facet-toml/tests/: format_suite.rs  main.rs
facet-value/: CHANGELOG.md  Cargo.toml  INLINE_STRING_TEST_PLAN.md  README.md
facet-value-format/: Cargo.toml  README.md
facet-value-format/src/: lib.rs
facet-value/benches/: map_keys.rs
facet-value/src/: array.rs  bytes.rs  datetime.rs  deserialize.rs  facet_impl.rs  format.rs  inline_roundtrip_tests.rs  lib.rs  macros.rs  number.rs  object.rs  other.rs  serialize.rs  string.rs  value.rs
facet-value/tests/: main.rs
facet-xdr/: Cargo.toml  README.md
facet-xdr/src/: error.rs  lib.rs  parser.rs  serializer.rs
facet-xdr/tests/: basic.rs
facet-zod/: CHANGELOG.md  Cargo.toml  README.md  readme-footer.md
facet-zod/src/: config.rs  emit.rs  generator.rs  lib.rs  mapping.rs
facet-zod/tests/: codegen.rs  oracle.rs
(+274 files in other folders)
