[package]
name = "facet-dessert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sweet helpers for facet deserialization - shared between facet-format and facet-dom"
keywords = ["serialization", "deserialization", "facet", "reflection"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { workspace = true }
facet-reflect = { workspace = true }

[features]
default = []

[lints]
workspace = true
