[package]
name = "facet-format"
version = "0.47.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Serializer/Deserializer traits for facet"
keywords = ["serialization", "deserialization", "facet", "reflection"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tracing = { version = "0.1", default-features = false, optional = true }
stacker = { version = "0.1.24", default-features = false, optional = true }
facet-core = { workspace = true }
facet-dessert = { path = "../facet-dessert", version = "0.46.0" }
facet-path = { workspace = true }
facet-reflect = { workspace = true }
facet-solver = { workspace = true }

parking_lot = { version = "0.12", optional = true }

# Pretty error rendering (optional)
ariadne = { version = "0.6", optional = true }

[dev-dependencies]

[features]
default = []
alloc = []
# Stack growth guards for deep recursive deserialization.
stacker = ["dep:stacker"]
# Enable logging via tracing
tracing = ["dep:tracing"]
# Network types (IpAddr, SocketAddr, etc.)
net = ["facet-core/net"]
# compact_str support
compact_str = ["facet-core/compact_str"]
# Pretty error rendering with ariadne
ariadne = ["dep:ariadne"]

[package.metadata.cargo-shear]
ignored = ["tracing"]

[lints]
workspace = true
