[package]
name = "facet-json-classics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Classic JSON benchmark fixtures (citm, twitter, canada) for facet benchmarks"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
brotli = "8"
