[package]
name = "facet-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate Python type definitions from facet type metadata"
keywords = ["python", "codegen", "facet", "types", "interop"]
categories = ["development-tools", "encoding"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { workspace = true }

[dev-dependencies]
facet = { workspace = true, features = ["std"] }
insta = { workspace = true }

[lints]
workspace = true
