[package]
name = "facet-value-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Serialize facet types into facet-value using the facet-format event model"
keywords = ["facet", "value", "serialization", "dynamic"]
categories = ["encoding", "data-structures"]
homepage = "https://facet.rs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std"]
std = []

[dependencies]
facet-core = { workspace = true }
facet-format = { workspace = true }
facet-reflect = { workspace = true }
facet-value = { workspace = true }

[dev-dependencies]
facet = { workspace = true, features = ["std", "all-impls", "doc"] }
