[package]
name = "facet-value"
version = "0.44.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory-efficient dynamic value type for facet, supporting JSON-like data plus bytes"
keywords = ["serialization", "value", "dynamic", "json"]
categories = ["encoding", "data-structures"]
homepage = "https://facet.rs"

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["std"]
std = ["alloc", "dep:indexmap"]
alloc = ["facet-core/alloc", "facet-reflect/alloc", "dep:facet-reflect"]
bolero-inline-tests = ["alloc"]

[dependencies]
facet-core = { workspace = true }
facet-format = { workspace = true }
facet-reflect = { version = "0.44.1", default-features = false, optional = true }
indexmap = { version = "2", optional = true }

[dev-dependencies]
bolero = { workspace = true }
divan = { workspace = true }
facet = { version = "0.44.1", features = ["all-impls", "doc"] }
facet-reflect = { version = "0.44.1" }
facet-testhelpers = { version = "0.44.1" }
indexmap = { workspace = true }
kstring = "2"
serde_json = { workspace = true }

[[bench]]
name = "map_keys"
harness = false

[lints]
workspace = true
