[package]
name = "facet-xdr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "XDR serialization for facet using the new format architecture - successor to facet-xdr"
keywords = ["xdr", "serialization", "facet", "parsing", "binary"]
categories = ["encoding", "parsing"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core = { workspace = true }
facet-format = { path = "../facet-format", version = "0.44.2" }
facet-reflect = { workspace = true }

[dev-dependencies]
facet = { workspace = true, features = ["std", "all-impls"] }
xdr-codec = "0.4"

[features]
default = []
net = ["facet-format/net", "facet-core/net"]

[lints]
workspace = true
